# theory-of-computation-DFA-PDA

./: .gitignore  README.md  environment.yaml  main.py  pyproject.toml
app/: README.md  phase_1.py
app/pages/: phase_2.py  phase_3.py  phase_4.py
pages/: README.md  phase_1.py  phase_2.py  phase_3.py  phase_4.py
src/: DFA.py  PDA.py  README.md  dfa.py  expressions.py  pda.py  test.py  utils.py
